--- a/trunk/CctsRepository/t4/AttributeSpec.tt
+++ b/trunk/CctsRepository/t4/AttributeSpec.tt
@@ -49,5 +49,33 @@ namespace CctsRepository.<#= library.Name #>
 <#
 		}
 #>
+<#
+		var cloned = FirstCharToLowerCase(metaAttribute.ClassName);
+#>
+
+        public static <#= metaAttribute.ClassName #>Spec Clone<#= metaAttribute.ClassName #>(I<#= metaAttribute.ClassName #> <#= cloned #>)
+        {
+            return new <#= metaAttribute.ClassName #>Spec
+                   {
+                   	   Name = <#= cloned #>.Name,
+                       UpperBound = <#= cloned #>.UpperBound,
+                       LowerBound = <#= cloned #>.LowerBound,
+                       <#= metaAttribute.Type.Name #> = <#= cloned #>.<#= metaAttribute.Type.Name #>,
+<#
+		foreach (var dependency in MetaModel.GetDependenciesFor(metaAttribute))
+		{
+#>
+					   <#= FirstCharToUpperCase(dependency.Stereotype.ToString()) #> = <#= cloned #>.<#= FirstCharToUpperCase(dependency.Stereotype.ToString()) #>,
+<#
+		}
+		foreach (var taggedValue in metaAttribute.TaggedValues)
+		{
+#>
+					   <#= CopyTaggedValue(taggedValue, cloned) #>,
+<#
+		}
+#>
+                   };
+        }
     }
 }
