--- a/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
+++ b/trunk/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
@@ -5,32 +5,32 @@
     <DockPanel Background="#FFD4D0C8" Margin="2,5,5,5">
         
         <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelCCLs">Choose CC Library containing ACCs:</Label>
-            <ComboBox ItemsSource="{Binding Path=Model.CandidateCcLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboCCLs" SelectionChanged="comboboxCcls_SelectionChanged"></ComboBox>
+            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelCcLibrariess">Choose CC Library containing ACCs:</Label>
+            <ComboBox ItemsSource="{Binding Path=Model.CandidateCcLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxCcLibraries" SelectionChanged="comboboxCcLibraries_SelectionChanged"></ComboBox>
         </DockPanel>
         <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelACCs">Choose ACC used to generate the ABIE:</Label>
-            <ComboBox ItemsSource="{Binding Path=Model.CandidateAccNames}" HorizontalAlignment="Stretch" Height="23" Name="comboACCs" SelectionChanged="comboboxAccs_SelectionChanged"></ComboBox>
+            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelAccs">Choose ACC used to generate the ABIE:</Label>
+            <ComboBox ItemsSource="{Binding Path=Model.CandidateAccNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxAccs" SelectionChanged="comboboxAccs_SelectionChanged"></ComboBox>
         </DockPanel>        
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="1,15,1,1">
             <Button HorizontalAlignment="Center" Width="100" Name="buttonCreate" Margin="5,5,5,5" Click="buttonCreate_Click">C_reate ABIE</Button>
             <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Click="buttonClose_Click">_Close</Button>
         </StackPanel>
         <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelBIELs">BIE Library used to store the ABIE:</Label>
-            <ComboBox ItemsSource="{Binding Path=Model.CandidateBieLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboBIELs" SelectionChanged="comboboxBiels_SelectionChanged"></ComboBox>
+            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelBieLibraries">BIE Library used to store the ABIE:</Label>
+            <ComboBox ItemsSource="{Binding Path=Model.CandidateBieLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxBieLibraries" SelectionChanged="comboboxBieLibraries_SelectionChanged"></ComboBox>
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelBDTLs">BDT Library used to store the BDTs:</Label>
-            <ComboBox ItemsSource="{Binding Path=Model.CandidateBdtLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboBDTLs" SelectionChanged="comboboxBdtls_SelectionChanged"></ComboBox>
+            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelBdtLibraries">BDT Library used to store the BDTs:</Label>
+            <ComboBox ItemsSource="{Binding Path=Model.CandidateBdtLibraryNames}" HorizontalAlignment="Stretch" Height="23" Name="comboboxBdtLibraries" SelectionChanged="comboboxBdtLibraries_SelectionChanged"></ComboBox>
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelABIEName">Name of the generated ABIE:</Label>
-            <TextBox Name="textABIEName" Text="{Binding Path=Model.AbieName}" TextChanged="textAbieName_TextChanged" HorizontalAlignment="Stretch" Height="23"/>
+            <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelAbieName">Name of the generated ABIE:</Label>
+            <TextBox Name="textboxAbieName" Text="{Binding Path=Model.AbieName}" TextChanged="textboxAbieName_TextChanged" HorizontalAlignment="Stretch" Height="23"/>
         </DockPanel>
         <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Margin="1,5,1,1">
             <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelPrefix">Prefix used for the generated Artifacts:</Label>
-            <TextBox Name="textPrefix" Text="{Binding Path=Model.AbiePrefix}" HorizontalAlignment="Stretch" Height="23" TextChanged="textAbiePrefix_TextChanged"/>
+            <TextBox Name="textboxPrefix" Text="{Binding Path=Model.AbiePrefix}" HorizontalAlignment="Stretch" Height="23" TextChanged="textboxAbiePrefix_TextChanged"/>
         </DockPanel>
         <DockPanel>
             <TabControl DockPanel.Dock="Left" Name="tabControl" TabStripPlacement="Top" Margin="0,0,0,0">
@@ -40,9 +40,9 @@
                             <GroupBox Header="BCCs used as BBIEs" Margin="0,0,0,0">
                                 <DockPanel>
                                     <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="20" Margin="0,0,0,0">
-                                        <CheckBox DockPanel.Dock="Top" Name="checkboxBCCs" Margin="0,3,0,0" Checked="checkboxBccs_Checked" Unchecked="checkboxBccs_Checked">Select all BCCs</CheckBox>
+                                        <CheckBox DockPanel.Dock="Top" Name="checkboxBccs" Margin="0,3,0,0" Checked="checkboxBccs_Checked" Unchecked="checkboxBccs_Checked">Select all BCCs</CheckBox>
                                     </StackPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.CandidateBccItems}" Name="checkedlistboxBCCs" Margin="0,0,0,0" SelectionChanged="listboxBccs_ItemSelectionChanged" Padding="0,1,0,0">
+                                    <ListBox ItemsSource="{Binding Path=Model.CandidateBccItems}" Name="listboxBccs" Margin="0,0,0,0" SelectionChanged="listboxBccs_ItemSelectionChanged" Padding="0,1,0,0">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
@@ -61,10 +61,10 @@
                             <GroupBox Header="BBIEs based on BCCs" Margin="-2,0,0,0">
                                 <DockPanel>
                                     <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="20" Margin="0,0,0,0">
-                                        <Button Name="buttonAddBBIE" Height="15" Width="15" Click="buttonAddBbie_Click" FontSize="8">+</Button>
+                                        <Button Name="buttonAddBbie" Height="15" Width="15" Click="buttonAddBbie_Click" FontSize="8">+</Button>
                                         <Label Margin="0,-2,0,0">Add another BBIE</Label>
                                     </StackPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.PotentialBbieItems}" Name="checkedlistboxBBIEs" Margin="0,0,0,0" SelectionChanged="listboxBbies_ItemSelectionChanged" Padding="0,1,0,0">
+                                    <ListBox ItemsSource="{Binding Path=Model.PotentialBbieItems}" Name="listboxBbies" Margin="0,0,0,0" SelectionChanged="listboxBbies_ItemSelectionChanged" Padding="0,1,0,0">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
@@ -86,7 +86,7 @@
                                         <Button Name="buttonAddBdt" Height="15" Width="15" Click="buttonAddBdt_Click" FontSize="8">+</Button>
                                         <Label Margin="0,-2,0,0">Add another BDT</Label>
                                     </StackPanel>                                                                        
-                                    <ListBox ItemsSource="{Binding Path=Model.PotentialBdtItems}" Name="checkedlistboxBDTs" Margin="0,0,0,0" SelectionChanged="listboxBdts_ItemSelectionChanged" Padding="0,1,0,0">
+                                    <ListBox ItemsSource="{Binding Path=Model.PotentialBdtItems}" Name="listboxBdts" Margin="0,0,0,0" SelectionChanged="listboxBdts_ItemSelectionChanged" Padding="0,1,0,0">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
@@ -110,7 +110,7 @@
                         <UniformGrid Rows="1" Columns="2">
                             <GroupBox Header="ABIEs available to associate the new ABIE with" Margin="0,0,0,0">
                                 <DockPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.CandidateAbieItems}" Name="checkedlistboxABIEs" Margin="0,3,0,0" SelectionChanged="listboxAbies_ItemSelectionChanged" Padding="0,1,0,0">
+                                    <ListBox ItemsSource="{Binding Path=Model.CandidateAbieItems}" Name="listboxAbies" Margin="0,3,0,0" SelectionChanged="listboxAbies_ItemSelectionChanged" Padding="0,1,0,0">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
@@ -126,9 +126,9 @@
                                     </ListBox>
                                 </DockPanel>
                             </GroupBox>
-                            <GroupBox Header="ASCCs available for the chosen ABIE" Margin="-2,0,0,0">
+                            <GroupBox Header="ASBIEs available for the chosen ABIE" Margin="-2,0,0,0">
                                 <DockPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.PotentialAsbieItems}" Name="checkedlistboxASCCs" Margin="0,3,0,0" SelectionChanged="listboxAsbies_ItemSelectionChanged" Padding="0,1,0,0">
+                                    <ListBox ItemsSource="{Binding Path=Model.PotentialAsbieItems}" Name="listboxAsbies" Margin="0,3,0,0" SelectionChanged="listboxAsbies_ItemSelectionChanged" Padding="0,1,0,0">
                                         <ListBox.ItemTemplate>
                                             <DataTemplate>
                                                 <StackPanel Orientation="Horizontal">
