--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/BdtEditor.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/BdtEditor.xaml
@@ -1,144 +1,58 @@
 ﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.ui.BdtEditor"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"    
-    Height="610" Width="470" WindowStyle="SingleBorderWindow" Background="#FFD4D0C8" ShowInTaskbar="True" ResizeMode="NoResize" Title="BDT Editor" FontSize="11">
+    Height="550" Width="470" WindowStyle="SingleBorderWindow" Background="#FFD4D0C8" ShowInTaskbar="True" ResizeMode="NoResize" Title="BDT Editor" FontSize="11">
     <DockPanel Background="#FFD4D0C8" Margin="2,5,5,5">
-        <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="1,1,1,1">
-            <Button HorizontalAlignment="Center" Width="100" Name="buttonGenerateBDT" Margin="5,5,5,5" KeyboardNavigation.TabIndex="9" Height="23" Click="buttonGenerateBDT_Click">_Generate BDT</Button>
-            <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" KeyboardNavigation.TabIndex="10" Height="23" Click="buttonClose_Click">_Close</Button>
-        </StackPanel>
-        <GroupBox Header="Settings">
-            <DockPanel>
-                <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200">Choose CDT Library containing CDTs:</Label>
-                    <ComboBox HorizontalAlignment="Stretch" Height="23" Name="comboCDTLs" KeyboardNavigation.TabIndex="1"></ComboBox>
+        <GroupBox Header="Settings" DockPanel.Dock="Top">
+            <StackPanel Orientation="Vertical">
+                <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
+                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelCdtLibraries">Choose CDT Library containing CDTs:</Label>
+                    <ComboBox HorizontalAlignment="Stretch" Height="23" Name="comboboxCdtLibraries" SelectionChanged="comboboxCdtLibraries_SelectionChanged"></ComboBox>
                 </DockPanel>
-                <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200">Choose CDT used to generate the BDT:</Label>
-                    <ComboBox HorizontalAlignment="Stretch" Height="23" Name="comboCDTs" KeyboardNavigation.TabIndex="2"></ComboBox>
+                <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
+                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelCdts">Choose CDT used to generate the BDT:</Label>
+                    <ComboBox HorizontalAlignment="Stretch" Height="23" Name="comboboxCdts" SelectionChanged="comboboxCdts_SelectionChanged"></ComboBox>
                 </DockPanel>
-                <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200">BDT Library used to store the BDT:</Label>
-                    <ComboBox HorizontalAlignment="Stretch" Height="23" Name="comboBDTLs" KeyboardNavigation.TabIndex="8"></ComboBox>
-                </DockPanel>
-                <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200">Name of the generated BDT:</Label>
-                    <TextBox Name="textBDTName" HorizontalAlignment="Stretch" Height="23" KeyboardNavigation.TabIndex="7"/>
-                </DockPanel>
-                <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Margin="1,1,1,1">
-                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200">Prefix used for the generated BDT:</Label>
-                    <TextBox Name="textBDTPrefix" HorizontalAlignment="Stretch" Height="23" KeyboardNavigation.TabIndex="6"/>
-                </DockPanel>
-                <TabControl TabStripPlacement="Top" Margin="0,3,0,5">
-                    <TabItem Header="Attributes">
-                        <TabItem.Content>
-                            <DockPanel>
-                                <GroupBox Header="CON" DockPanel.Dock="Top">
-                                    <ListBox Margin="0,2,0,2" Name="checkedlistboxCON" Height="18" KeyboardNavigation.TabIndex="3">
-                                        <CheckBox></CheckBox>
+                <GroupBox Header="Attributes" Margin="0,1,0,4" Height="325">
+                    <TabControl TabStripPlacement="Top" Margin="0,1,0,0" Name="tabControl">
+                        <TabItem Header="C_ON" Name="tabCon">
+                            <TabItem.Content>
+                                <DockPanel>
+                                    <ListBox Name="listboxCon" SelectionChanged="listboxCon_SelectionChanged">
+                                        <CheckBox Checked="listboxCon_ItemCheckBoxChecked" Unchecked="listboxCon_ItemCheckBoxChecked"></CheckBox>
                                     </ListBox>
-                                </GroupBox>
-                                <GroupBox Header="SUPs">
-                                    <DockPanel>
-                                        <CheckBox Margin="1,2,1,3" DockPanel.Dock="Top" Name="checkboxAttributes" KeyboardNavigation.TabIndex="4">Select all SUPs</CheckBox>
-                                        <ListBox Margin="0,2,0,2" Name="checkedlistboxSUPs" KeyboardNavigation.TabIndex="5">
-                                            <CheckBox></CheckBox>
-                                        </ListBox>
-                                    </DockPanel>
-                                </GroupBox>
-                            </DockPanel>
-                        </TabItem.Content>
-                    </TabItem>
-                </TabControl>
-            </DockPanel>
+                                </DockPanel>
+                            </TabItem.Content>
+                        </TabItem>
+                        <TabItem Header="S_UPs" Name="tabSups">
+                            <TabItem.Content>
+                                <DockPanel>
+                                    <CheckBox Margin="1,2,1,3" DockPanel.Dock="Top" Name="checkboxSups" Checked="checkboxSups_Checked" Unchecked="checkboxSups_Unchecked">Select all SUPs</CheckBox>
+                                    <ListBox Margin="0,2,0,0" Name="listboxSups" SelectionChanged="listboxSups_SelectionChanged">
+                                        <CheckBox Checked="listboxSups_ItemCheckBoxChecked" Unchecked="listboxSups_ItemCheckBoxChecked"></CheckBox>
+                                    </ListBox>
+                                </DockPanel>
+                            </TabItem.Content>
+                        </TabItem>
+                    </TabControl>
+                </GroupBox>
+                <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
+                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelBdtPrefix">Prefix used for the generated BDT:</Label>
+                    <TextBox Name="textboxBdtPrefix" HorizontalAlignment="Stretch" Height="23" TextChanged="textboxBdtPrefix_TextChanged" />
+                </DockPanel>
+                <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
+                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelBdtName">Name of the generated BDT:</Label>
+                    <TextBox Name="textboxBdtName" HorizontalAlignment="Stretch" Height="23" TextChanged="textboxBdtName_TextChanged" />
+                </DockPanel>
+                <DockPanel HorizontalAlignment="Stretch" Margin="1,1,1,1">
+                    <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="200" Name="labelBdtLibraries">BDT Library used to store the BDT:</Label>
+                    <ComboBox HorizontalAlignment="Stretch" Height="23" Name="comboboxBdtLibraries" SelectionChanged="comboboxBdtLibraries_SelectionChanged"></ComboBox>
+                </DockPanel>
+            </StackPanel>
         </GroupBox>
-<!--        <TabControl DockPanel.Dock="Left" Name="tabControl" TabStripPlacement="Top" Margin="0,0,0,0">
-                <TabItem Name="tabAttributes" Header="Attributes">
-                    <TabItem.Content>
-                        <UniformGrid Rows="1" Columns="3">
-                            <GroupBox Header="BCCs used as BBIEs" Margin="0,0,0,0">
-                                <DockPanel>
-                                    <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="20" Margin="0,0,0,0">
-                                        <CheckBox DockPanel.Dock="Top" Name="checkboxBCCs" Margin="0,3,0,0" KeyboardNavigation.TabIndex="0">Select all BCCs</CheckBox>
-                                    </StackPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.CandidateBccItems}" Name="checkedlistboxBCCs" Margin="0,0,0,0" SelectionChanged="checkedlistboxBCCs_SelectionChanged" KeyboardNavigation.TabIndex="1">
-                                        <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <CheckBox IsChecked="{Binding Path=Checked}">
-                                                    <TextBox Text="{Binding Path=Text}" IsEnabled="False" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectBCCCheckboxItemOnMouseSingleClick" KeyUp="textboxKeyUp"/>
-                                                </CheckBox>
-                                            </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
-                                </DockPanel>
-                            </GroupBox>
-                            <GroupBox Header="BBIEs based on BCCs" Margin="-2,0,0,0">
-                                <DockPanel>
-                                    <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="20" Margin="0,0,0,0">
-                                        <Button Name="buttonAddBBIE" Height="15" Width="15" Click="buttonAddBBIE_Click" FontSize="8" KeyboardNavigation.TabIndex="2">+</Button>
-                                        <Label Margin="0,-2,0,0">Add another BBIE</Label>
-                                    </StackPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.PotentialBbieItems}" Name="checkedlistboxBBIEs" Margin="0,0,0,0" SelectionChanged="checkedlistboxBBIEs_SelectionChanged" KeyboardNavigation.TabIndex="3">
-                                        <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <CheckBox IsChecked="{Binding Path=Checked}">
-                                                    <TextBox Text="{Binding Path=Text}" IsEnabled="False" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectBCCCheckboxItemOnMouseSingleClick" KeyUp="textboxKeyUp"/>
-                                                </CheckBox>
-                                            </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
-                                </DockPanel>
-                            </GroupBox>
-                            <GroupBox Header="BDTs available to typify the BBIEs" Margin="-2,0,0,0">
-                                <DockPanel>
-                                    <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Height="20" Margin="0,0,0,0" />
-                                    <ListBox ItemsSource="{Binding Path=Model.PotentialBdtItems}" Name="checkedlistboxBDTs" Margin="0,0,0,0" SelectionChanged="checkedlistboxBDTs_SelectionChanged" KeyboardNavigation.TabIndex="4">
-                                        <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <CheckBox IsChecked="{Binding Path=Checked}">
-                                                    <TextBox Text="{Binding Path=Text}" IsReadOnly="False" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectBCCCheckboxItemOnMouseSingleClick" KeyUp="textboxKeyUp"/>
-                                                </CheckBox>
-                                            </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
-                                </DockPanel>
-                            </GroupBox>
-                        </UniformGrid>
-                    </TabItem.Content>
-                </TabItem>
-                <TabItem Name="tabAssociations" Header="Associations">
-                    <TabItem.Content>
-                        <UniformGrid Rows="1" Columns="2">
-                            <GroupBox Header="ABIEs available to associate the new ABIE with" Margin="0,0,0,0">
-                                <DockPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.CandidateAsbieItems}" Name="checkedlistboxABIEs" Margin="0,3,0,0" SelectionChanged="checkedlistboxABIEs_SelectionChanged" KeyboardNavigation.TabIndex="0">
-                                        <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <CheckBox IsChecked="{Binding Path=Checked}">
-                                                    <TextBox Text="{Binding Path=Text}" IsReadOnly="False" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectBCCCheckboxItemOnMouseSingleClick" KeyUp="textboxKeyUp"/>
-                                                </CheckBox>
-                                            </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
-                                </DockPanel>
-                            </GroupBox>
-                            <GroupBox Header="ASCCs available for the chosen ABIE" Margin="-2,0,0,0">
-                                <DockPanel>
-                                    <ListBox ItemsSource="{Binding Path=Model.CandidateAsccItems}" Name="checkedlistboxASCCs" Margin="0,3,0,0" SelectionChanged="checkedlistboxASCCs_SelectionChanged" KeyboardNavigation.TabIndex="1">
-                                        <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <CheckBox IsChecked="{Binding Path=Checked}">
-                                                    <TextBox Text="{Binding Path=Text}" IsReadOnly="False" BorderThickness="0" Background="Transparent" PreviewMouseLeftButtonDown="SelectBCCCheckboxItemOnMouseSingleClick" KeyUp="textboxKeyUp"/>
-                                                </CheckBox>
-                                            </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
-                                </DockPanel>
-                            </GroupBox>
-                        </UniformGrid>
-                    </TabItem.Content>
-                </TabItem>
-            </TabControl>
-        </DockPanel>-->
+        <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="1,1,1,1">
+            <Button HorizontalAlignment="Center" Width="100" Name="buttonCreate" Margin="5,5,5,5" Height="23" Click="buttonCreate_Click">C_reate BDT</Button>
+            <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Height="23" Click="buttonClose_Click" IsCancel="True">_Close</Button>
+        </StackPanel>
     </DockPanel>
 </Window>
