--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/AbieEditor.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.ui.AbieEditor"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"    
-    Height="627" Width="589" WindowStyle="SingleBorderWindow" Background="#FFD4D0C8" ShowInTaskbar="True" ResizeMode="CanResize" Title="ABIE Editor" FontSize="11">
-    <DockPanel Background="#FFD4D0C8" Margin="2,5,5,5">
+    Height="627" Width="589" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="CanResize" Title="ABIE Editor" FontSize="11">
+    <DockPanel Margin="2,5,5,5">
         
         <DockPanel DockPanel.Dock="Top" HorizontalAlignment="Stretch" Margin="1,1,1,1">
             <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelCcLibrariess">Choose CC Library containing ACCs:</Label>
@@ -14,7 +14,7 @@
         </DockPanel>        
         <StackPanel Orientation="Horizontal" DockPanel.Dock="Bottom" HorizontalAlignment="Center" Margin="1,15,1,1">
             <Button HorizontalAlignment="Center" Width="100" Name="buttonCreate" Margin="5,5,5,5" Click="buttonCreate_Click">C_reate ABIE</Button>
-            <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Click="buttonClose_Click">_Close</Button>
+            <Button HorizontalAlignment="Center" Width="100" Name="buttonClose" Margin="5,5,5,5" Click="buttonClose_Click" IsCancel="True">_Close</Button>
         </StackPanel>
         <DockPanel DockPanel.Dock="Bottom" HorizontalAlignment="Stretch" Margin="1,1,1,1">
             <Label DockPanel.Dock="Left" HorizontalAlignment="Left" Height="23" Width="220" Name="labelBieLibraries">BIE Library used to store the ABIE:</Label>
