--- a/VIENNAAddIn/upcc3/Wizards/dev/ui/UpccModelCreator.xaml
+++ b/VIENNAAddIn/upcc3/Wizards/dev/ui/UpccModelCreator.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="VIENNAAddIn.upcc3.Wizards.dev.ui.UpccModelCreator"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Height="610" Width="450" WindowStyle="SingleBorderWindow" Background="#FFD4D0C8" ShowInTaskbar="True" ResizeMode="NoResize" Title="Default UPCC Model Creator" FontSize="11">
-    <DockPanel Background="#FFD4D0C8" Margin="2,5,5,5">
+    Height="610" Width="450" WindowStyle="SingleBorderWindow" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" ShowInTaskbar="True" ResizeMode="NoResize" Title="Default UPCC Model Creator" FontSize="11">
+    <DockPanel Margin="2,5,5,5">
         <DockPanel DockPanel.Dock="Top">
             <Label DockPanel.Dock="Left" HorizontalAlignment="Left">Model Name:</Label>
             <TextBox Name="textboxModelName" KeyboardNavigation.TabIndex="0" TextChanged="textboxModelName_TextChanged" />
@@ -62,7 +62,7 @@
             <Button HorizontalAlignment="Center" Width="150" Height="23" Name="buttonClose" IsCancel="True" Margin="5,5,5,5" KeyboardNavigation.TabIndex="20" Click="buttonClose_Click">_Close</Button>
         </StackPanel>
         <GroupBox DockPanel.Dock="Bottom" Header="Status" Margin="1,8,0,3">
-            <TextBox IsReadOnly="True" Background="#FFD4D0C8" Name="rtxtStatus" Margin="2,2,2,2" TextWrapping="Wrap" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"></TextBox>
+            <TextBox IsReadOnly="True" Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" Name="rtxtStatus" Margin="2,2,2,2" TextWrapping="Wrap" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto"></TextBox>
         </GroupBox>
     </DockPanel>
 </Window>
